--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="hero">
       <img src="assets/hero.png" alt="Hero Image">
       <div class="hero-text">
-        <h2>Welcome to Our Business</h2>
+        <h2 class="header-text">Welcome to Our Business</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <a href="projects.html" class="btn">View Projects</a>
       </div>
