--- a/assets/gallery1/index.html
+++ b/assets/gallery1/index.html
@@ -2,8 +2,8 @@
 <html>
   <head><meta charset="utf-8"><title>Gallery 1</title></head>
   <body>
-    <a href="img1.png">img1.jpeg</a><br>
-    <a href="img2.png">img2.jpeg</a><br>
-    <a href="img3.png">img3.jpeg</a><br>
+    <a href="img1.jpeg">img1.jpeg</a><br>
+    <a href="img2.jpeg">img2.jpeg</a><br>
+    <a href="img3.jpeg">img3.jpeg</a><br>
   </body>
 </html>
