--- a/index.html
+++ b/index.html
@@ -25,12 +25,28 @@
   <main>
     <section class="hero">
       <div class="hero-text">
-        <h2 class="header-text">Welcome to Our Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <a href="projects.html" class="btn">View Projects</a>
+        <h2 class="header-text">Building Your Dream Home</h2>
+        <p>Family Owned Since 1990</p>
+        <a href="projects.html" class="btn">View Our Work</a>
       </div>
     </section>
   </main>
+
+  <section class="intro">
+      <h2>Welcome to Mike Geryak Construction</h2>
+      <p>At Mike Geryak Construction, we believe your home should be as unique as you are. <br/> From lot planning to finishing touches, our experienced team works hand-in-hand with you to bring your vision to life, on time and on budget.</p>
+  </section>
+
+  <hr class="section-divider">
+
+  <!-- 4) Featured Projects -->
+  <section class="featured-projects">
+    <h2>Our Work</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="assets/gallery1/img1.jpeg" alt="Project 1">
+      </div>
+  </section>
 
   <hr class="section-divider">
 
