--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
       <div class="hero-text">
         <h2 class="header-text">Building Your Dream Home</h2>
-        <p>Family Owned Since 1990</p>
+        <p>Since 1990</p>
         <a href="projects.html" class="btn">View Our Work</a>
       </div>
     </section>
@@ -34,7 +34,7 @@
 
   <section class="intro">
       <h2>Welcome to Mike Geryak Construction</h2>
-      <p>At Mike Geryak Construction, we believe your home should be as unique as you are. <br/> From lot planning to finishing touches, our experienced team works hand-in-hand with you to bring your vision to life, on time and on budget.</p>
+      <p>At Mike Geryak Construction, we believe your home should be as unique as you are. <br/> From lot planning to finishing touches, our experienced team works hand-in-hand with you to bring your vision to life.<h/p>
   </section>
 
   <hr class="section-divider">
