update index images

--- a/index.html
+++ b/index.html
@@ -43,9 +43,20 @@
   <section class="featured-projects">
     <h2>Our Work</h2>
     <div class="cards">
-      <div class="card">
-        <img src="assets/gallery1/img1.jpeg" alt="Project 1">
+      <div class="featured-card">
+        <img src="assets/gallery2/img1.jpeg" alt="Project 1">
       </div>
+      <div class="featured-card">
+        <img src="assets/gallery1/img1.jpeg" alt="Project 2">
+      </div>
+      <div class="featured-card">
+        <img src="assets/gallery1/img1.jpeg" alt="Project 3">
+      </div>
+      <div class="featured-card">
+        <img src="assets/gallery2/img1.jpeg" alt="Project 4">
+      </div>
+      <!-- add more .card blocks here; they’ll auto-wrap to new rows past 3 items -->
+    </div>
   </section>
 
   <hr class="section-divider">
