update about page

--- a/about.html
+++ b/about.html
@@ -23,19 +23,14 @@
   </header>
 
   <main class="container about">
-    <section class="about-block story-section">
-      <h2 class="header-text">About Us</h2>
-      <p>
-        Mike Geryak Construction is dedicated to providing customers with a positive building experience and a quality custom-built home from start to finish. As a builder in Hancock County and the southern parts of Hamilton County areas since 1990, our experienced, practical knowledge of the industry, and professional team are available to assist you in your new construction project and site development. Contact us to schedule a consultation and learn how Mike Geryak Construction Custom Home Builder operates. We will provide you with excellent, personalized service and customer satisfaction.
-      </p>
-    </section>
-    <section class="about-block values-section">
-      <h3>Our Values</h3>
-      <ul>
-        <li><strong>Quality:</strong> We never compromise on the materials or workmanship we offer.</li>
-        <li><strong>Family:</strong> We treat every client and team member like one of our own.</li>
-      </ul>
-    </section>
+    <div class="story-find-container">
+        <section class="about-block story-section">
+          <h2 class="header-text">About Us</h2>
+          <p>
+            Mike Geryak Construction is dedicated to providing customers with a positive building experience and a quality custom-built home from start to finish. As a builder in Hancock County and the southern parts of Hamilton County areas since 1990, our experienced, practical knowledge of the industry, and professional team are available to assist you in your new construction project and site development. Contact us to schedule a consultation and learn how Mike Geryak Construction Custom Home Builder operates. We will provide you with excellent, personalized service and customer satisfaction.
+          </p>
+        </section>
+    </div>
 
     <hr class="section-divider">
 
@@ -44,6 +39,8 @@
         <img src="assets/ceo.png" alt="Mike Geryak">
         <h3>Mike Geryak</h3>
         <p><em>Owner &amp; Founder</em></p>
+        <p>317-445-5306 <br/>
+           mikegeryak@cs.com</p>
         <p>
           With over 30 years of experience guiding our growth, Mike blends his great leadership 
           with hands-on expertise. Under his direction, our team can and have delivered top-tier results.
@@ -51,6 +48,18 @@
       </div>
     </section>
   </main>
+
+  <hr class="section-divider">
+
+    <section class="about-block find-us story-section">
+      <h3>Where To Find Us</h3>
+      <ul>
+          Mike Geryak Construction <br />
+          Custom Home Builder <br />
+          2235 W. U.S. HWY. 40 <br />
+          Greenfield, IN 46140 <br />
+      </ul>
+    </section>
 
   <hr class="section-divider">
 
