update about and home page text

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Mike Geryak Construction</h1>
+      <h1 class="logo">MIKE GERYAK CONSTRUCTION <br/>CUSTOM LUXURY HOME BUILDER</h1>
       <nav class="nav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -27,7 +27,7 @@
         <section class="about-block story-section">
           <h2 class="header-text">About Us</h2>
           <p>
-            Mike Geryak Construction is dedicated to providing customers with a positive building experience and a quality custom-built home from start to finish. As a builder in Hancock County and the southern parts of Hamilton County areas since 1990, our experienced, practical knowledge of the industry, and professional team are available to assist you in your new construction project and site development. Contact us to schedule a consultation and learn how Mike Geryak Construction Custom Home Builder operates. We will provide you with excellent, personalized service and customer satisfaction.
+            Mike Geryak Construction is dedicated to providing customers with a positive building experience and a quality custom-built home from start to finish. As a builder in Hancock County and the southern parts of Hamilton County areas since 1990, our experience, practical knowledge of the industry, and professional team are available to assist you in your new construction project and site development. Contact us to schedule a consultation and learn how Mike Geryak Construction Custom Home Builder operates. We will provide you with excellent, personalized service and customer satisfaction.
           </p>
         </section>
     </div>
@@ -39,11 +39,10 @@
         <img src="assets/ceo.png" alt="Mike Geryak">
         <h3>Mike Geryak</h3>
         <p><em>Owner &amp; Founder</em></p>
-        <p>317-445-5306 <br/>
-           mikegeryak@cs.com</p>
-        <p>
-          With over 30 years of experience guiding our growth, Mike blends his great leadership 
-          with hands-on expertise. Under his direction, our team can and have delivered top-tier results.
+        <p class="owner-text">
+            Mike Geryak is driven by a deep passion for craftsmanship and building. With a meticulous eye for detail and a commitment to excellence, he puts his customers at the heart of everything he does. 
+            Whether it's a custom home or renovation or a specialized project, Mike approached each job with integrity, precision, and pride in his work. 
+            He believes that great results come from honest communication, thoughtful planning, and a genuine respect for the people he builds for. More than just a builder, Mike is a partner dedicated to turning visions into reality and creating spaces that stand the test of time.
         </p>
       </div>
     </section>
@@ -57,8 +56,16 @@
           Mike Geryak Construction <br />
           Custom Home Builder <br />
           2235 W. U.S. HWY. 40 <br />
-          Greenfield, IN 46140 <br />
+          Greenfield, IN 46140 <br /> <br />
+          317-445-5306 <br/>
+          mikegeryak@cs.com <br/>
+          MIKE GERYAK, OWNER
       </ul>
+      <div class="logo-container">
+          <img src="assets/nahb-logo.png" alt="NATIONAL ASSOCIATION OF HOME BUILDERS">
+          <img src="assets/bagi-logo.png" alt="BUILDERS ASSOCIATION OF GREATER INDIANAPOLIS">
+          <img src="assets/owens-logo.png" alt="OWENS CORNING PREFERRED CONTRACTOR">
+      </div>
     </section>
 
   <hr class="section-divider">
