--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Mike Geryak Construction</h1>
+      <h1 class="logo">MIKE GERYAK CONSTRUCTION <br/>CUSTOM LUXURY HOME BUILDER</h1>
       <nav class="nav">
         <ul>
           <li><a href="index.html">Home</a></li>
