--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Mike Geryak Construction</h1>
+        <h1 class="logo">MIKE GERYAK CONSTRUCTION <br/>CUSTOM LUXURY HOME BUILDER</h1>
       <nav class="nav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -34,7 +34,11 @@
 
   <section class="intro">
       <h2>Welcome to Mike Geryak Construction</h2>
-      <p>At Mike Geryak Construction, we believe your home should be as unique as you are. <br/> From lot planning to finishing touches, our experienced team works hand-in-hand with you to bring your vision to life.<h/p>
+      <p>At Mike Geryak Construction, we believe your home should be as unique as you are. From site planning to finishing touches, our experienced team works hand-in-hand with you to bring your vision to life.</p>
+
+Whether you're building from the ground up or renovating an existing space, we take the time to understand your lifestyle, priorities, and aesthetic. With quality craftsmanship, transparent communication, and a commitment to excellence, we turn ideas into homes that feel personal, functional, and timeless.
+
+No matter the size or scope of your project, we're here to guide you every step of the way, ensuring that the finished result isn’t just a house, but a place you're proud to call home.
   </section>
 
   <hr class="section-divider">
