--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,6 @@
   </header>
 
   <main class="container">
-    <!-- Gallery 1 -->
     <section
       class="gallery"
       data-dir="gallery1"
@@ -37,7 +36,6 @@
 
     <hr class="section-divider">
 
-    <!-- Gallery 2 -->
     <section
       class="gallery"
       data-dir="gallery2"
@@ -45,6 +43,71 @@
       <div class="gallery-viewer">
         <button class="prev" aria-label="Previous image">‹</button>
         <img src="" alt="Gallery 2 image">
+        <button class="next" aria-label="Next image">›</button>
+      </div>
+    </section>
+
+    <hr class="section-divider">
+
+    <section
+      class="gallery"
+      data-dir="gallery3"
+    >
+      <div class="gallery-viewer">
+        <button class="prev" aria-label="Previous image">‹</button>
+        <img src="" alt="Gallery 3 image">
+        <button class="next" aria-label="Next image">›</button>
+      </div>
+    </section>
+
+    <hr class="section-divider">
+
+    <section
+      class="gallery"
+      data-dir="gallery4"
+    >
+      <div class="gallery-viewer">
+        <button class="prev" aria-label="Previous image">‹</button>
+        <img src="" alt="Gallery 4 image">
+        <button class="next" aria-label="Next image">›</button>
+      </div>
+    </section>
+
+    <hr class="section-divider">
+
+    <section
+      class="gallery"
+      data-dir="gallery5"
+    >
+      <div class="gallery-viewer">
+        <button class="prev" aria-label="Previous image">‹</button>
+        <img src="" alt="Gallery 5 image">
+        <button class="next" aria-label="Next image">›</button>
+      </div>
+    </section>
+
+    <hr class="section-divider">
+
+    <section
+      class="gallery"
+      data-dir="gallery6"
+    >
+      <div class="gallery-viewer">
+        <button class="prev" aria-label="Previous image">‹</button>
+        <img src="" alt="Gallery 6 image">
+        <button class="next" aria-label="Next image">›</button>
+      </div>
+    </section>
+
+    <hr class="section-divider">
+
+    <section
+      class="gallery"
+      data-dir="gallery7"
+    >
+      <div class="gallery-viewer">
+        <button class="prev" aria-label="Previous image">‹</button>
+        <img src="" alt="Gallery 7 image">
         <button class="next" aria-label="Next image">›</button>
       </div>
     </section>
