--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
         </ul>
         <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
       </nav>
+      <img class="logo" src="assets/GeryakHouse.png" alt="">
     </div>
   </header>
 
